Update address of git repositories in requirements.yml

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,5 @@
 ---
 - name: devops.repos
-  src: git@git.reform.hmcts.net:devops/repos-role.git
+  src: https://github.com/hmcts/repos-role.git
   scm: git
+  version: master
